--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -24,3 +24,7 @@ jobs:
         uses: JetBrains/qodana-action@v2024.1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+      - name: Qodana Scan
+        uses: JetBrains/qodana-action@main
+        with:
+          args: --baseline,qodana.sarif.json
