update qodana yml

--- a/qodana.yaml
+++ b/qodana.yaml
@@ -23,3 +23,6 @@ include:
   - name: FinalPrivateMethod
   - name: JavadocLinkAsPlainText
   - name: RedundantCast
+  - name: CommentedOutCode
+  - name: DuplicatedCode
+  - name: RedundantTypeArguments
